added linkValidation and include js
added linkValidation and include js

--- a/web115/onepagesite/index.html
+++ b/web115/onepagesite/index.html
@@ -10,17 +10,17 @@
 
 <body>
     <header>
-    <nav class="navMenu">
-        <h1 id="h1Main">Gina W's Gawky Wraith | WEB115</h1>
-        <ul>
-            <li><a href="#section1"> Section 1</a></li>
-            <li><a href="#section2"> Section 2</a></li>
-            <li><a href="#section3"> Section 3</a></li>
-            <li><a href="#section4"> Section 4</a></li>
-            <li><a href="#section5"> Section 5</a></li>
-            <li><a href="#section6"> Section 6</a></li>
-        </ul>
-    </nav>
+        <nav class="navMenu">
+            <h1 id="h1Main">Gina W's Gawky Wraith | WEB115</h1>
+            <ul>
+                <li><a href="#section1"> Section 1</a></li>
+                <li><a href="#section2"> Section 2</a></li>
+                <li><a href="#section3"> Section 3</a></li>
+                <li><a href="#section4"> Section 4</a></li>
+                <li><a href="#section5"> Section 5</a></li>
+                <li><a href="#section6"> Section 6</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="sectionsDiv">
@@ -56,8 +56,8 @@
 
     </div>
 
-    <div data-include="/components/footer.html"></div>
-    <script src="/scripts/include.js"></script>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/include.js"></script>
 </body>
 
 </html>
