changed default output to blank

--- a/web115/fizzbuzz4.html
+++ b/web115/fizzbuzz4.html
@@ -44,18 +44,15 @@
                 </p>
                 <p>
                     <label for="firstDivisorOutput">First Output:</label>
-                    <input type="text" id="firstDivisorOutput" name="firstDivisorOutput"
-                        value="Brawl">
+                    <input type="text" id="firstDivisorOutput" name="firstDivisorOutput" value="Brawl">
                 </p>
                 <p>
                     <label for="secondDivisorOutput">Second Output:</label>
-                    <input type="text" id="secondDivisorOutput" name="secondDivisorOutput"
-                        value="Crawl">
+                    <input type="text" id="secondDivisorOutput" name="secondDivisorOutput" value="Crawl">
                 </p>
                 <p>
                     <label for="thirdDivisorOutput">Third Output:</label>
-                    <input type="text" id="thirdDivisorOutput" name="thirdDivisorOutput"
-                        value="Loot">
+                    <input type="text" id="thirdDivisorOutput" name="thirdDivisorOutput" value="Loot">
                 </p>
                 <p>
                     <label for="countTotal">Count to:</label>
@@ -63,7 +60,7 @@
                 </p>
                 <p>
                     <label for="defaultOutput">Default Output:</label>
-                    <input type="text" id="defaultOutput" name="defaultOutput" value="Dungeon">
+                    <input type="text" id="defaultOutput" name="defaultOutput" value="">
                 </p>
                 <p>
                     <input type="button" id="submitButton" name="submitButton" value="Submit">
