Removed extra divs
Removed extra divs, simplified what I could to ":first-of-type " when possible. Added elements with the same css properties to one css rule when possible as well.

--- a/web115/brand.html
+++ b/web115/brand.html
@@ -11,27 +11,25 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2 id="h2Main">Welcome to Digital Dungeons</h2>
-        <div id="brandParagraph1">
-            <p> where our mission is to be the conduit for your creative endeavors in the world of
+        <h2>Digital Dungeons Brand Board</h2>
+        <div>
+            <p> Welcome to Digital Dungeons, where our mission is to be the conduit for your creative endeavors in the
+                world of
                 RPG mapping. We believe that every map is a tapestry of narratives waiting to be woven, and we're here
                 to
                 provide a canvas for your storytelling prowess. By offering a treasure trove of original maps, we aim to
                 enable
                 epic journeys that captivate, inspire, and transport both players and creators alike.</p>
-            <p id="brandTagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital
-                    Dungeons</em>
-            </p>
         </div>
         <hr>
-        <h2>Gallery</h2>
+        <h3>Gallery</h3>
         <img src="images/map1.png" alt="image of map 1" width="450" height="450">
         <img src="images/map2.png" alt="image of map 2" width="450" height="450">
         <hr>
-        <h2>Colors</h2>
+        <h3>Colors</h3>
         <ul id="colorsList">
             <li id="c-bgcolor">
-                <p>#E5C293<br>Bg color</p>
+                <p>#E5C293<br>Background</p>
             </li>
             <li id="c-accent1">
                 <p>#A17751<br>Accent1</p>
@@ -47,13 +45,13 @@
             </li>
         </ul>
         <hr>
-        <h2>Fonts</h2>
+        <h3>Fonts</h3>
         <div id="couriernew">
-            <h3>Courier New</h3>
+            <h4>Courier New</h4>
             <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
         </div>
         <div id="monospace">
-            <h3>Monospace</h3>
+            <h4>Monospace</h4>
             <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
         </div>
     </main>
