--- a/web115/index.html
+++ b/web115/index.html
@@ -11,8 +11,8 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2 id="h2Main">Home</h2>
-        <div id="indexParagraph1">
+        <h2>Home</h2>
+        <div>
             <p>This is the Homepage for Gina's WEB115 course.
                 This page will be frequently updated with new creations and updates for this course.
                 You can learn more about me from my
