--- a/web115/contract.html
+++ b/web115/contract.html
@@ -11,8 +11,8 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2 id="h2Main">Course Contract</h2>
-        <div id="contractParagraph1">
+        <h2>Course Contract</h2>
+        <div>
             <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
                 Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
 
