--- a/web115/fizzbuzz0.html
+++ b/web115/fizzbuzz0.html
@@ -12,7 +12,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2 id="h2Main">FizzBuzz 0</h2>
+        <h2>FizzBuzz 0</h2>
         <h3 id="greeting">Welcome to Digital Dungeons</h2>
             <form>
                 <fieldset>
