--- a/web115/fizzbuzz3.html
+++ b/web115/fizzbuzz3.html
@@ -12,7 +12,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2 id="h2Main">FizzBuzz 3</h2>
+        <h2>FizzBuzz 3</h2>
         <h3 id="greeting">Welcome to Digital Dungeons</h3>
         <form>
             <fieldset>
