Root index updated
Root index updated, added include.js footer, edited footer.html to validatior links to add /web115 so image links work on root index page, removed list styles from root index page

--- a/index.html
+++ b/index.html
@@ -23,27 +23,8 @@
             </ul>
         </nav>
     </main>
-    <footer>
-        <hr>
-        <nav>
-
-            <a href="https://github.com/gwhitle">Github</a>
-            <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web115">web115.io</a>
-            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-            <br>
-            Page Designed by WhitsGits
-            <hr>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2F" target="_blank"><img
-                    src="web115/images/html_validation_button.gif" alt="html validation image"></a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-                target="_blank"><img src="web115/images/validation_button_css_rectangle_blue.gif"
-                    alt="css validation image"></a>
-        </nav>
-    </footer>
+    <div data-include="/web115/components/footer.html"></div>
+    <script src="/web115/scripts/include.js"></script>
 
 </body>
 
