Updated nav for onepagesite
Added header nav from home page to onepagesite. Adjusted CSS to allow for the added header.

--- a/web115/onepagesite/index.html
+++ b/web115/onepagesite/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <header>
         <nav class="navMenu">
-            <h1 id="h1Main">Gina W's Gawky Wraith | WEB115</h1>
+            <div data-include="components/header.html"></div>
             <ul>
                 <li><a href="#section1"> Section 1</a></li>
                 <li><a href="#section2"> Section 2</a></li>
@@ -21,7 +20,6 @@
                 <li><a href="#section6"> Section 6</a></li>
             </ul>
         </nav>
-    </header>
 
     <div class="sectionsDiv">
         <section id="section1" class="section">
