Removed web115 styles from root io
Removed web115 styles from root github io, added link to web215.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gwhitle.github.io</title>
-    <link rel="stylesheet" href="/web115/styles/default.css">
 </head>
 
 <body>
@@ -21,7 +20,13 @@
             <ul>
                 <li><a href="web115/index.html">Index - Web115</a></li>
             </ul>
-        </nav>
+
+            <h3>Web215:</h3>
+            <nav>
+                <ul>
+                    <li><a href="web215/index.html">Index - Web215</a></li>
+                </ul>
+            </nav>
     </main>
     <div data-include="/web115/components/footer.html"></div>
     <script src="/web115/scripts/include.js"></script>
