Added template, introduction and contract html
Added template, created and updated introduction and contract html. Began some styling.

--- a/web215/contract.html
+++ b/web215/contract.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
-    <title>Gina W's Grunge Werewolf | WEB215</title>
+    <title>Gina W's Grunge Werewolf | WEB215 | Course Contract</title>
     <link rel="stylesheet" href="styles/default.css">
 
     <!--     
@@ -33,7 +33,7 @@
 <body>
     <header>
         <h1>Gina W's Grunge Werewolf | WEB215</h1>
-        <h2>Home</h2>
+        <h2>Course Contract</h2>
     </header>
     <nav>
         <ul>
@@ -43,7 +43,17 @@
         </ul>
     </nav>
 
-    <p>This is the homepage for Gina W's WEB215 coursework.</p>
+    <p>I, Gina M. Whitley agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
+        and Scripting class with my instructor, Professor D.I. von Briesen.
+
+        I understand that all work that I do on publicly available online tools will be available to the world, and will
+        not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+
+        I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
+        failure to turn in assignments may show as absences.
+
+        Signed: Gina M. Whitley, 01/12/2024
+    </p>
 
     <footer>
         <nav>
