--- a/web215/introduction.html
+++ b/web215/introduction.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
-    <title>Gina W's Grunge Werewolf | WEB215</title>
+    <title>Gina W's Grunge Werewolf | WEB215 | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 
     <!--     
@@ -33,7 +33,7 @@
 <body>
     <header>
         <h1>Gina W's Grunge Werewolf | WEB215</h1>
-        <h2>Home</h2>
+        <h2>Introduction</h2>
     </header>
     <nav>
         <ul>
@@ -42,8 +42,26 @@
             <li><a href="contract.html">Contract</a></li>
         </ul>
     </nav>
+    <figure>
+        <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
+        <figcaption>Avoiding the camera at a waterfall</figcaption>
+    </figure>
 
-    <p>This is the homepage for Gina W's WEB215 coursework.</p>
+    <ul>
+        <li>Personal background: Born in NC</li>
+        <li>Professional Background: Former grocery stocker for 6+ years, currently working towards finishing my degree
+            and pursuing new goals.</li>
+        <li>Academic Background: Full Stack Development Student in progress.</li>
+        <li>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</li>
+        <li>Primary Computer Platform: Windows 10</li>
+        <li>Courses I'm in & Why: To further my education and fulfill degree reqs.</li>
+        <ul>
+            <li>WEB215 - Adv Web Markup and Scripting</li>
+            <li>CSC121 - Python Programming</li>
+        </ul>
+        <li>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling. I also
+            really enjoy crafting and DIY projects.</li>
+    </ul>
 
     <footer>
         <nav>
