--- a/web215/template.html
+++ b/web215/template.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
-    <title>Gina W's Grunge Werewolf | WEB215</title>
+    <title>Gina W's Grunge Werewolf | WEB215 | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 
     <!--     
@@ -32,8 +32,8 @@
 
 <body>
     <header>
-        <h1>Gina W's Grunge Werewolf | WEB215</h1>
-        <h2>Home</h2>
+        <h1>Header</h1>
+        <h2>Subheader</h2>
     </header>
     <nav>
         <ul>
@@ -42,21 +42,9 @@
             <li><a href="contract.html">Contract</a></li>
         </ul>
     </nav>
-
-    <p>This is the homepage for Gina W's WEB215 coursework.</p>
-
     <footer>
-        <nav>
-            <a href="https://github.com/gwhitle">Github</a>
-            <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web215">web215.io</a>
-            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        </nav>
         Bazzom bazang... we do the bestest!
-        <br />Designed by &copy; WhitGits
+        <br />Designed by &copy; Whitsits
         <br />
         <a href="http://validator.w3.org/check?uri=referer" style="text-decoration: none">
             <img src="images/html_validation_button.gif" alt="Validate HTML" />
