Testing include.js
Testing include.js

--- a/web215/index.html
+++ b/web215/index.html
@@ -31,10 +31,7 @@
 </head>
 
 <body>
-    <header>
-        <h1>Gina W's Grunge Werewolf | WEB215</h1>
-        <h2>Home</h2>
-    </header>
+    <div data-include="components/header.html"></div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -44,29 +41,8 @@
     </nav>
 
     <p>This is the homepage for Gina W's WEB215 coursework.</p>
-
-    <footer>
-        <nav>
-            <a href="https://github.com/gwhitle">Github</a>
-            <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web215">web215.io</a>
-            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        </nav>
-        Bazzom bazang... we do the bestest!
-        <br />Designed by &copy; WhitGits
-        <br />
-        <a href="http://validator.w3.org/check?uri=referer" style="text-decoration: none">
-            <img src="images/html_validation_button.gif" alt="Validate HTML" />
-        </a>
-        <!-- you may need to change the name of your image link to match the one you 
-       uploaded -->
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" style="text-decoration: none">
-            <img src="images/validation_button_css_rectangle_blue.gif" alt="Validate CSS" />
-        </a>
-    </footer>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/include.js"></script>
 </body>
 
 </html>
