added include.js to other pages
added include.js to other pages

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </ul>
             </nav>
     </main>
-    <div data-include="/web115/components/footer.html"></div>
-    <script src="/web115/scripts/include.js"></script>
+    <div data-include="components/footer.html"></div>
+    <script src="/web215/scripts/include.js"></script>
 
 </body>
 
