fixed root index validation
fixed root index validation

--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@
                 </ul>
             </nav>
     </main>
-    <div data-include="components/footer.html"></div>
-    <script src="/web215/scripts/include.js"></script>
-
+    <nav>
+        <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://gwhitle.github.io/">Github.io</a>
+        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+        <p>Page Designed by WhitsGits</p>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2F" id="validation_link_html"
+            target="_blank"><img src="web215/images/html_validation_button.gif" alt="html validation"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            id="validation_link_css" target="_blank"><img src="web215/images/validation_button_css_rectangle_blue.gif"
+                alt="css validator"></a>
+    </nav>
 </body>
 
 </html>
