fixed introduction list error
fixed introduction list validation error

--- a/web215/introduction.html
+++ b/web215/introduction.html
@@ -44,11 +44,12 @@
         <li>Academic Background: Full Stack Development Student in progress.</li>
         <li>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</li>
         <li>Primary Computer Platform: Windows 10</li>
-        <li>Courses I'm in & Why: To further my education and fulfill degree reqs.</li>
-        <ul>
-            <li>WEB215 - Adv Web Markup and Scripting</li>
-            <li>CSC121 - Python Programming</li>
-        </ul>
+        <li>Courses I'm in & Why: To further my education and fulfill degree reqs.
+            <ul>
+                <li>WEB215 - Adv Web Markup and Scripting</li>
+                <li>CSC121 - Python Programming</li>
+            </ul>
+        </li>
         <li>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling. I also
             really enjoy crafting and DIY projects.</li>
     </ul>
