Added correct h2's to pages
Added correct h2's to pages: contract, index, introduction

--- a/web215/contract.html
+++ b/web215/contract.html
@@ -32,6 +32,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
+    <h2>Contract</h2>
 
     <p>I, Gina M. Whitley agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
         and Scripting class with my instructor, Professor D.I. von Briesen.
