--- a/web215/index.html
+++ b/web215/index.html
@@ -32,6 +32,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
+    <h2>Home</h2>
     <p>This is the homepage for Gina W's WEB215 coursework.</p>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
