--- a/web215/introduction.html
+++ b/web215/introduction.html
@@ -32,6 +32,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
+    <h2>Introduction</h2>
     <figure>
         <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
         <figcaption>Avoiding the camera at a waterfall</figcaption>
