Added fonts, edited css
Added fonts, edited css, edited paragraphs in contract and bullets in introduction

--- a/web215/contract.html
+++ b/web215/contract.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grunge Werewolf | WEB215 | Course Contract</title>
     <link rel="stylesheet" href="styles/default.css">
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
 
     <!--     
         Structure of HTML5 semantic layout swiped from PHP Fiddle and modified
@@ -35,16 +36,15 @@
     <h2>Contract</h2>
 
     <p>I, Gina M. Whitley agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
-        and Scripting class with my instructor, Professor D.I. von Briesen.
+        and Scripting class with my instructor, Professor D.I. von Briesen.</p>
 
-        I understand that all work that I do on publicly available online tools will be available to the world, and will
-        not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+    <p>I understand that all work that I do on publicly available online tools will be available to the world, and will
+        not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
 
-        I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
-        failure to turn in assignments may show as absences.
+    <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
+        failure to turn in assignments may show as absences.</p>
 
-        Signed: Gina M. Whitley, 01/12/2024
-    </p>
+    <p>Signed: Gina M. Whitley, 01/12/2024</p>
 
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
