--- a/web215/index.html
+++ b/web215/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grunge Werewolf | WEB215</title>
     <link rel="stylesheet" href="styles/default.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
     <!--     
         Structure of HTML5 semantic layout swiped from PHP Fiddle and modified
         to include validing code and validation buttons and some other tweaks
