--- a/web215/introduction.html
+++ b/web215/introduction.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grunge Werewolf | WEB215 | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
     <!--     
         Structure of HTML5 semantic layout swiped from PHP Fiddle and modified
         to include validing code and validation buttons and some other tweaks
@@ -39,20 +39,20 @@
     </figure>
 
     <ul>
-        <li>Personal background: Born in NC</li>
-        <li>Professional Background: Former grocery stocker for 6+ years, currently working towards finishing my degree
-            and pursuing new goals.</li>
-        <li>Academic Background: Full Stack Development Student in progress.</li>
-        <li>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</li>
-        <li>Primary Computer Platform: Windows 10</li>
-        <li>Courses I'm in & Why: To further my education and fulfill degree reqs.
+        <li><p>Personal background: Born in NC</p></li>
+        <li><p>Professional Background: Former grocery stocker for 6+ years, currently working towards finishing my degree
+            and pursuing new goals.</p></li>
+        <li><p>Academic Background: Full Stack Development Student in progress.</p></li>
+        <li><p>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</p></li>
+        <li><p>Primary Computer Platform: Windows 10</p></li>
+        <li><p>Courses I'm in & Why: To further my education and fulfill degree reqs.
             <ul>
                 <li>WEB215 - Adv Web Markup and Scripting</li>
                 <li>CSC121 - Python Programming</li>
             </ul>
-        </li>
-        <li>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling. I also
-            really enjoy crafting and DIY projects.</li>
+        </p></li>
+        <li><p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling. I also
+            really enjoy crafting and DIY projects.</p></li>
     </ul>
 
     <div data-include="components/footer.html"></div>
