--- a/web215/brand.html
+++ b/web215/brand.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB215 | Brand Guide</title>
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
 
 </head>
 
@@ -27,40 +30,40 @@
         </div>
         <hr>
         <h3>Gallery</h3>
-        <img src="images/castle1.png" alt="placeholder_alttext" width="450" height="450">
-        <img src="images/village1.png" alt="placeholder_alttext" width="450" height="450">
+        <div class="gallery">
+            <img src="images/castle1.png" alt="placeholder_alttext" width="450" height="450">
+            <img src="images/village1.png" alt="placeholder_alttext" width="450" height="450">
+        </div>
         <hr>
         <h3>Colors</h3>
-        <ul>
-            <li>
-                <p>#FFEC44<br>light yellow</p>
+        <ul id="brandColors">
+            <li class="darkText">
+                <p>#FFEC44<br>Links</p>
+            </li>
+            <li class="darkText">
+                <p>#FFC402<br>Accent 1</p>
+            </li>
+            <li class="darkText">
+                <p>#D1B2EA<br>Headings</p>
+            </li>
+            <li class="darkText">
+                <p>#EEE9E4<br>paragraph text</p>
             </li>
             <li>
-                <p>#FFC402<br>deep yellow</p>
-            </li>
-            <li>
-                <p>#D1B2EA<br>light purp</p>
-            </li>
-            <li>
-                <p>#886B9F<br>deep purple</p>
-            </li>
-            <li>
-                <p>#EEE9E4<br>off white</p>
-            </li>
-            <li>
-                <p>#59493E<br>brown gray</p>
+                <p>#59493E<br>Background</p>
             </li>
         </ul>
         <hr>
         <h3>Fonts</h3>
-        <div id="couriernew">
-            <h4>Courier New</h4>
-            <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <div id="junge">
+            <h4>Junge - Headers</h4>
+            <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
         </div>
-        <div id="monospace">
-            <h4>Monospace</h4>
-            <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <div id="garamond">
+            <h4>Garamond - Other Text</h4>
+            <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
         </div>
+        <hr>
     </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
