added intro link in contract, edited css
added intro link in contract, edited css for branded styles

--- a/web215/brand.html
+++ b/web215/brand.html
@@ -15,7 +15,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Lunar Lore Tours</h2>
+        <h2>Lunar Lore Tours - Brand Guide</h2>
         <div>
             <p>Lunar Lore Tours invites adventure seekers to embark on thrilling guided journeys to mystical
                 destinations steeped in werewolf folklore.</p>
@@ -47,12 +47,29 @@
                 <p>#D1B2EA<br>Headings</p>
             </li>
             <li class="darkText">
-                <p>#EEE9E4<br>paragraph text</p>
+                <p>#EEE9E4<br>Paragraph Text</p>
             </li>
             <li>
-                <p>#59493E<br>Background</p>
+                <p>#6F5E53<br>Background</p>
+            </li>
+            <li>
+                <p>#59493E<br>Dark Text</p>
             </li>
         </ul>
+        <div>
+            <div class="exampleText">
+                <p>Paragraph Text color on Background color</p>
+            </div>
+            <div class="exampleText">
+                <p>Headings color on Background color</p>
+            </div>
+            <div class="exampleText">
+                <p class="darkText"> Dark Text color on Background color</p>
+            </div>
+            <div class="exampleText">
+                <p class="darkText">Dark Text color on Paragraph Text color</p>
+            </div>
+        </div>
         <hr>
         <h3>Fonts</h3>
         <div id="junge">
@@ -63,7 +80,6 @@
             <h4>Garamond - Other Text</h4>
             <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
         </div>
-        <hr>
     </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
