--- a/web215/contract.html
+++ b/web215/contract.html
@@ -35,7 +35,7 @@
     <div data-include="components/header.html"></div>
     <h2>Contract</h2>
 
-    <p>I, Gina M. Whitley agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
+    <p>I, <a href="introduction.html">Gina M. Whitley</a> agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
         and Scripting class with my instructor, Professor D.I. von Briesen.</p>
 
     <p>I understand that all work that I do on publicly available online tools will be available to the world, and will
