fixed incorrect label
fixed incorrect label

--- a/web215/brand.html
+++ b/web215/brand.html
@@ -38,7 +38,7 @@
         <h3>Colors</h3>
         <ul id="brandColors">
             <li class="darkText">
-                <p>#FFEC44<br>Links</p>
+                <p>#FFEC44<br>Links Hover</p>
             </li>
             <li class="darkText">
                 <p>#FFC402<br>Accent 1</p>
@@ -64,7 +64,7 @@
                 <p>Headings color on Background color</p>
             </div>
             <div class="exampleText">
-                <p class="darkText"> Dark Text color on Background color</p>
+                <p class="darkText"> Dark Text color on Links Hover color</p>
             </div>
             <div class="exampleText">
                 <p class="darkText">Dark Text color on Paragraph Text color</p>
