Round Trip Form updates, main added to all pages
Round Trip Form JS updates:  fixed broken updateInputWidth function, added ifs to handle initials in names, added courseInputs currently set to 6 max, added field validation, and added required button inputs.

HTML: added main to all pages, added buttons to introduction_form.html

--- a/web215/index.html
+++ b/web215/index.html
@@ -32,9 +32,11 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <h2>Home</h2>
-    <p>This is the homepage for Gina W's WEB215 coursework.</p>
-    <br><br>
+    <main>
+        <h2>Home</h2>
+        <p>This is the homepage for Gina W's WEB215 coursework.</p>
+        <br><br>
+    </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
 </body>
