--- a/web215/introduction_form.html
+++ b/web215/introduction_form.html
@@ -33,59 +33,85 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <h2>Introduction Form</h2>
-    <h3 id="nameHeader">Gina W.</h3>
-    <form>
-        <div id="formContainer">
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" name="firstName" value="Gina">
+    <main>
+        <h2>Introduction Form</h2>
+        <h3 id="nameHeader">Gina W.</h3>
+        <form>
+            <div id="formContainer">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" name="firstName" value="Gina">
 
-            <label for="middleName">Middle Name:</label>
-            <input type="text" id="middleName" name="middleName" value="M" maxlength="1">
+                <label for="middleName">Middle Name:</label>
+                <input type="text" id="middleName" name="middleName" value="M">
 
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" name="lastName" value="W">
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" name="lastName" value="W">
 
-            <label for="picture">Upload Picture:</label>
-            <input type="file" id="picture" name="picture">
+                <label for="picture">Upload Picture:</label>
+                <input type="file" id="picture" name="picture">
 
-            <label for="figure_caption">Picture Caption:</label>
-            <input type="text" id="figure_caption" name="figure_caption" value="Avoiding the camera at a waterfall">
+                <label for="figure_caption">Picture Caption:</label>
+                <input type="text" id="figure_caption" name="figure_caption" value="Avoiding the camera at a waterfall">
 
-            <label for="personal_background">Personal Background:</label>
-            <input type="text" id="personal_background" name="personal_background" value="Born in NC">
+                <label for="personal_background">Personal Background:</label>
+                <input type="text" id="personal_background" name="personal_background" value="Born in NC">
 
-            <label for="professional_background">Professional Background:</label>
-            <input type="text" id="professional_background" name="professional_background"
-                value="Former grocery stocker for 6+ years, currently working towards finishing my degree and pursuing new goals.">
+                <label for="professional_background">Professional Background:</label>
+                <input type="text" id="professional_background" name="professional_background"
+                    value="Former grocery stocker for 6+ years, currently working towards finishing my degree and pursuing new goals.">
 
-            <label for="academic_background">Academic Background:</label>
-            <input type="text" id="academic_background" name="academic_background"
-                value="Full Stack Development Student in progress.">
+                <label for="academic_background">Academic Background:</label>
+                <input type="text" id="academic_background" name="academic_background"
+                    value="Full Stack Development Student in progress.">
 
-            <label for="subject_background">Background in this Subject:</label>
-            <input type="text" id="subject_background" name="subject_background"
-                value="I have taken the intro WEB-110 class, as well as WEB-115.">
+                <label for="subject_background">Background in this Subject:</label>
+                <input type="text" id="subject_background" name="subject_background"
+                    value="I have taken the intro WEB-110 class, as well as WEB-115.">
 
-            <label for="primary_platform">Primary Platform:</label>
-            <input type="text" id="primary_platform" name="primary_platform" value="Windows 10">
+                <label for="primary_platform">Primary Platform:</label>
+                <input type="text" id="primary_platform" name="primary_platform" value="Windows 10">
 
-            <label for="current_courses">Courses I'm in & Why:</label>
-            <input type="text" id="current_courses" name="current_courses"
-                value="WEB215 - Adv Web Markup and Scripting">
+                <label for="num_courses">Current courses:</label>
+                <input type="number" id="num_courses" name="num_courses" placeholder="Select number of courses:"
+                    required>
+                <div id="courseInputsContainer"></div>
+                <div id="courseInfo"></div>
 
-            <label for="interesting_item">Funny/Interesting Item about Yourself:</label>
-            <input type="text" id="interesting_item" name="interesting_item"
-                value="I enjoy all types of fantasy world-building and storytelling. I also really enjoy crafting and DIY projects.">
-            <input type="button" id="submitButton" name="submitButton" value="Submit">
-        </div>
-        <div id="pictureContainer">
-            <figcaption id="figure_caption"></figcaption>
-        </div>
-        <ul id="formOutput"></ul>
-        <input type="reset" id="resetButton" name="resetButton" value="Reset">
-    </form>
+                <label for="interesting_item">Funny/Interesting Item about Yourself:</label>
+                <input type="text" id="interesting_item" name="interesting_item"
+                    value="I enjoy all types of fantasy world-building and storytelling. I also really enjoy crafting and DIY projects.">
 
+
+                <div class="extraButtons">
+                    <label for="leftOption">Left or Right?</label>
+
+                    <input type="radio" id="leftOption" name="direction" value="left">
+                    <label for="leftOption">Left</label>
+
+                    <input type="radio" id="rightOption" name="direction" value="right">
+                    <label for="rightOption">Right</label>
+                </div>
+                <br>
+                <div class="extraButtons">
+                    <label for="leftOption">Choose a Color:</label>
+                    <input type="checkbox" id="redOption" name="color" value="red">
+                    <label for="redOption">Red</label>
+
+                    <input type="checkbox" id="blueOption" name="color" value="blue">
+                    <label for="blueOption">Blue</label>
+
+                    <input type="checkbox" id="purpleOption" name="color" value="purple">
+                    <label for="purpleOption">Purple</label>
+                </div>
+                <input type="submit" id="submitButton" name="submitButton" value="Submit">
+            </div>
+            <div id="pictureContainer">
+                <figcaption id="figure_caption"></figcaption>
+            </div>
+            <ul id="formOutput"></ul>
+            <input type="reset" id="resetButton" name="resetButton" value="Reset">
+        </form>
+    </main>
 
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
