--- a/web215/contract.html
+++ b/web215/contract.html
@@ -33,19 +33,23 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <h2>Contract</h2>
+    <main>
+        <h2>Contract</h2>
 
-    <p>I, <a href="introduction.html">Gina M. Whitley</a> agree to abide by the terms of the course contract in my Spring 2024, WEB215-N801, Adv Markup
-        and Scripting class with my instructor, Professor D.I. von Briesen.</p>
+        <p>I, <a href="introduction.html">Gina M. Whitley</a> agree to abide by the terms of the course contract in my
+            Spring 2024, WEB215-N801, Adv Markup
+            and Scripting class with my instructor, Professor D.I. von Briesen.</p>
 
-    <p>I understand that all work that I do on publicly available online tools will be available to the world, and will
-        not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
+        <p>I understand that all work that I do on publicly available online tools will be available to the world, and
+            will
+            not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
 
-    <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
-        failure to turn in assignments may show as absences.</p>
+        <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
+            failure to turn in assignments may show as absences.</p>
 
-    <p>Signed: Gina M. Whitley, 01/12/2024</p>
+        <p>Signed: Gina M. Whitley, 01/12/2024</p>
 
+    </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
 </body>
