--- a/web215/introduction.html
+++ b/web215/introduction.html
@@ -32,29 +32,46 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <h2>Introduction</h2>
-    <figure>
-        <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
-        <figcaption>Avoiding the camera at a waterfall</figcaption>
-    </figure>
+    <main>
+        <h2>Introduction</h2>
+        <figure>
+            <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
+            <figcaption>Avoiding the camera at a waterfall</figcaption>
+        </figure>
 
-    <ul>
-        <li><p>Personal background: Born in NC</p></li>
-        <li><p>Professional Background: Former grocery stocker for 6+ years, currently working towards finishing my degree
-            and pursuing new goals.</p></li>
-        <li><p>Academic Background: Full Stack Development Student in progress.</p></li>
-        <li><p>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</p></li>
-        <li><p>Primary Computer Platform: Windows 10</p></li>
-        <li><p>Courses I'm in & Why: To further my education and fulfill degree reqs.
-            <ul>
-                <li>WEB215 - Adv Web Markup and Scripting</li>
-                <li>CSC121 - Python Programming</li>
-            </ul>
-        </p></li>
-        <li><p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling. I also
-            really enjoy crafting and DIY projects.</p></li>
-    </ul>
-
+        <ul>
+            <li>
+                <p>Personal background: Born in NC</p>
+            </li>
+            <li>
+                <p>Professional Background: Former grocery stocker for 6+ years, currently working towards finishing my
+                    degree
+                    and pursuing new goals.</p>
+            </li>
+            <li>
+                <p>Academic Background: Full Stack Development Student in progress.</p>
+            </li>
+            <li>
+                <p>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115.</p>
+            </li>
+            <li>
+                <p>Primary Computer Platform: Windows 10</p>
+            </li>
+            <li>
+                <p>Courses I'm in & Why: To further my education and fulfill degree reqs.
+                <ul>
+                    <li>WEB215 - Adv Web Markup and Scripting</li>
+                    <li>CSC121 - Python Programming</li>
+                </ul>
+                </p>
+            </li>
+            <li>
+                <p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling.
+                    I also
+                    really enjoy crafting and DIY projects.</p>
+            </li>
+        </ul>
+    </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.js"></script>
 </body>
