--- a/web215/introduction_form.html
+++ b/web215/introduction_form.html
@@ -38,48 +38,69 @@
         <h3 id="nameHeader">Gina W.</h3>
         <form>
             <div id="formContainer">
-                <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" name="firstName" value="Gina">
+                <label for="firstName">First Name:
+                    <input type="text" id="firstName" name="firstName" value="Gina">
+                </label>
 
-                <label for="middleName">Middle Name:</label>
-                <input type="text" id="middleName" name="middleName" value="M">
 
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" value="W">
+                <label for="middleName">Middle Name:
+                    <input type="text" id="middleName" name="middleName" value="M">
+                </label>
 
-                <label for="picture">Upload Picture:</label>
-                <input type="file" id="picture" name="picture">
+                <label for="lastName">Last Name:
+                    <input type="text" id="lastName" name="lastName" value="W">
+                </label>
 
-                <label for="figure_caption">Picture Caption:</label>
-                <input type="text" id="figure_caption" name="figure_caption" value="Avoiding the camera at a waterfall">
+                <label for="picture">Upload Picture:
+                    <input type="file" id="picture" name="picture">
+                </label>
 
-                <label for="personal_background">Personal Background:</label>
-                <input type="text" id="personal_background" name="personal_background" value="Born in NC">
 
-                <label for="professional_background">Professional Background:</label>
-                <input type="text" id="professional_background" name="professional_background"
-                    value="Former grocery stocker for 6+ years, currently working towards finishing my degree and pursuing new goals.">
+                <label for="figure_caption">Picture Caption:
+                    <input type="text" id="figure_caption" name="figure_caption"
+                        value="Avoiding the camera at a waterfall">
+                </label>
 
-                <label for="academic_background">Academic Background:</label>
-                <input type="text" id="academic_background" name="academic_background"
-                    value="Full Stack Development Student in progress.">
 
-                <label for="subject_background">Background in this Subject:</label>
-                <input type="text" id="subject_background" name="subject_background"
-                    value="I have taken the intro WEB-110 class, as well as WEB-115.">
+                <label for="personal_background">Personal Background:
+                    <input type="text" id="personal_background" name="personal_background" value="Born in NC">
+                </label>
 
-                <label for="primary_platform">Primary Platform:</label>
-                <input type="text" id="primary_platform" name="primary_platform" value="Windows 10">
+                <label for="professional_background">Professional Background:
+                    <input type="text" id="professional_background" name="professional_background"
+                        value="Former grocery stocker for 6+ years, currently working towards finishing my degree and pursuing new goals.">
+                </label>
 
-                <label for="num_courses">Current courses:</label>
-                <input type="number" id="num_courses" name="num_courses" placeholder="Select number of courses:"
-                    required>
+
+                <label for="academic_background">Academic Background:
+                    <input type="text" id="academic_background" name="academic_background"
+                        value="Full Stack Development Student in progress.">
+                </label>
+
+
+                <label for="subject_background">Background in this Subject:
+                    <input type="text" id="subject_background" name="subject_background"
+                        value="I have taken the intro WEB-110 class, as well as WEB-115.">
+                </label>
+
+
+                <label for="primary_platform">Primary Platform:
+                    <input type="text" id="primary_platform" name="primary_platform" value="Windows 10">
+                </label>
+
+
+                <label for="num_courses">Current courses:
+                    <input type="number" id="num_courses" name="num_courses" placeholder="Select number of courses:"
+                        required>
+                </label>
                 <div id="courseInputsContainer"></div>
                 <div id="courseInfo"></div>
 
-                <label for="interesting_item">Funny/Interesting Item about Yourself:</label>
-                <input type="text" id="interesting_item" name="interesting_item"
-                    value="I enjoy all types of fantasy world-building and storytelling. I also really enjoy crafting and DIY projects.">
+                <label for="interesting_item">Funny/Interesting Item about Yourself:
+                    <input type="text" id="interesting_item" name="interesting_item"
+                        value="I enjoy all types of fantasy world-building and storytelling. I also really enjoy crafting and DIY projects.">
+                </label>
+
 
 
                 <div class="extraButtons">
@@ -106,7 +127,9 @@
                 <input type="submit" id="submitButton" name="submitButton" value="Submit">
             </div>
             <div id="pictureContainer">
-                <figcaption id="figure_caption"></figcaption>
+                <figure>
+                    <figcaption id="figure_captionOutput"></figcaption>
+                </figure>
             </div>
             <ul id="formOutput"></ul>
             <input type="reset" id="resetButton" name="resetButton" value="Reset">
