Changes to: CSS for all pages, Html for: Home, Contract, and intro Form
Changes to: CSS for all pages, Html for: Home, Contract, and intro Form

All pages:
Added margin to main
Box around nav/footer: The validation links were in the nav, but I have now moved them out of the footer’s nav to show that the border is only on the navs in the header and footer.
Italicized tagline
Adjusted nav link styles to be uppercase, removed underlines

Home:
Added home to <title>
Removed br’s
Added paragraph
Added link to intro in the above paragraph

Contract:
Name and date italicized

Introduction Form:
Added introduction form to <title>

--- a/web215/brand.html
+++ b/web215/brand.html
@@ -56,7 +56,7 @@
                 <p>#59493E<br>Dark Text</p>
             </li>
         </ul>
-        <div>
+        <div id="textExamples">
             <div class="exampleText">
                 <p>Paragraph Text color on Background color</p>
             </div>
