--- a/web215/introduction_form.html
+++ b/web215/introduction_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
-    <title>Gina W's Grunge Werewolf | WEB215 | Introduction</title>
+    <title>Gina W's Grunge Werewolf | WEB215 | Introduction Form</title>
     <link rel="stylesheet" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
     <script src="scripts/introduction_form.js" defer></script>
