--- a/web215/contract.html
+++ b/web215/contract.html
@@ -47,7 +47,7 @@
         <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
             failure to turn in assignments may show as absences.</p>
 
-        <p>Signed: Gina M. Whitley, 01/12/2024</p>
+        <p>Signed: <i>Gina M. Whitley, 01/12/2024</i></p>
 
     </main>
     <div data-include="components/footer.html"></div>
