First Push: Web 250 Base folder & files
First Push: Web 250 Base folder & files
- web250 index
- web250 introduction
- web250 contract
- base folders (components, images, scripts, and styles)
- imported scripts for validation as well as including headers and footers

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <ul>
                 <li><a href="web215/index.html">Index - Web215</a></li>
             </ul>
+
+            <h3>Web250:</h3>
+            <ul>
+                <li><a href="web250/index.html">Index - Web250</a></li>
+            </ul>
         </nav>
     </main>
     <nav>
