--- a/web250/brand.html
+++ b/web250/brand.html
@@ -14,7 +14,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <main>
+    <main class="container">
         <h2>The Wyvern’s Hoard - Brand Guide</h2>
         <div>
             <p>The Wyvern’s Hoard invites fantasy enthusiasts and curious seekers to explore a realm filled with magical
