--- a/web250/contract.html
+++ b/web250/contract.html
@@ -10,7 +10,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <main>
+    <main class="container">
         <h2>Contract</h2>
 
         <p>I, <a href="introduction.html">Gina M. Whitley</a> agree to abide by the terms of the course contract in my
