--- a/web250/index.html
+++ b/web250/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <main>
+    <main class="container">
         <h2>Home</h2>
         <p>This is the homepage for Gina W's WEB250 coursework.</p>
         <p>Here you will find links to all projects for WEB250 allowing you to follow my work over this course!</p>
