--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -10,7 +10,7 @@
 
 <body>
     <div data-include="components/header.html"></div>
-    <main>
+    <main class="container">
         <h2>Introduction</h2>
         <figure>
             <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
